--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "license": "ISC",
   "author": "Pierre Gronnier",
   "type": "commonjs",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "initdb": "node db/initdb.js",
-    "start": "node app.js"
+    "seed": "node db/seed.js",
+    "start": "node app.js",
+    "postinstall": "npm run initdb && npm run seed"
   },
   "dependencies": {
     "axios": "^1.12.2",
