--- a/package.json
+++ b/package.json
@@ -15,14 +15,11 @@
   "type": "commonjs",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "npm run initdb",
     "initdb": "node db/initdb.js",
-    "seed": "node db/seed.js",
-    "start": "node app.js",
-    "postinstall": "npm run initdb && npm run seed"
+    "seed": "node db/seed.js"
   },
   "dependencies": {
-    "axios": "^1.12.2",
     "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
